agrego nuevo campo al model de profesional

--- a/locales/es.json
+++ b/locales/es.json
@@ -58,26 +58,26 @@
 
   "i18n.holidays.001": "Error al crear el feriado (HD-ERR-001)",
   "i18n.holidays.002": "Error al obtener los feriados (HD-ERR-002)",
-  "i18n.holidays.003": "El feriado fué creado (HD-003)",
-  "i18n.holidays.004": "El feriado fue borrado (HD-004)",
+  "i18n.holidays.003": "El feriado fué creado",
+  "i18n.holidays.004": "El feriado fue borrado",
 
   "i18n.servicesAndProfessionals.001": "Faltan datos obligatorios o el formato de los profesionales es incorrecto (SAP-ERR-001)",
   "i18n.servicesAndProfessionals.002": "Uno o más profesionales no existen en la base de datos (SAP-ERR-002)",
-  "i18n.servicesAndProfessionals.003": "El servicio fue creado exitosamente (SAP-003)",
+  "i18n.servicesAndProfessionals.003": "El servicio fue creado exitosamente",
   "i18n.servicesAndProfessionals.004": "Servicio no encontrado (SAP-ERR-004)",
   "i18n.servicesAndProfessionals.005": "Faltan datos obligatorios o el formato de los profesionales es incorrecto (SAP-ERR-005)",
   "i18n.servicesAndProfessionals.006": "Uno o más profesionales no existen en la base de datos (SAP-ERR-006)",
-  "i18n.servicesAndProfessionals.007": "El servicio fue actualizado exitosamente (SAP-007)",
+  "i18n.servicesAndProfessionals.007": "El servicio fue actualizado exitosamente",
   "i18n.servicesAndProfessionals.008": "Faltan datos obligatorios o el formato de los días de trabajo es incorrecto (SAP-ERR-008)",
   "i18n.servicesAndProfessionals.009": "Falta el email del profesional (SAP-ERR-009)",
-  "i18n.servicesAndProfessionals.010": "El profesional fue creado exitosamente (SAP-010)",
+  "i18n.servicesAndProfessionals.010": "El profesional fue creado exitosamente",
   "i18n.servicesAndProfessionals.011": "Profesional no encontrado (SAP-ERR-011)",
-  "i18n.servicesAndProfessionals.012": "El profesional fue actualizado exitosamente (SAP-012)",
+  "i18n.servicesAndProfessionals.012": "El profesional fue actualizado exitosamente",
   "i18n.servicesAndProfessionals.013": "Error al obtener los servicios (SAP-ERR-013)",
   "i18n.servicesAndProfessionals.014": "Servicio no encontrado (SAP-ERR-014)",
-  "i18n.servicesAndProfessionals.015": "Servicio eliminado correctamente (SAP-015)",
+  "i18n.servicesAndProfessionals.015": "Servicio eliminado correctamente",
   "i18n.servicesAndProfessionals.016": "Error al eliminar el servicio (SAP-ERR-016)",
-  "i18n.servicesAndProfessionals.017": "Profesional eliminado correctamente (SAP-017)",
+  "i18n.servicesAndProfessionals.017": "Profesional eliminado correctamente",
   "i18n.servicesAndProfessionals.018": "Error al eliminar el profesional (SAP-ERR-018)",
 
 
